--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -8,6 +8,7 @@
 	<h1>Digite seus dados</h1>
 	<form action="Exemplo">
 	 Nome: <input type="text" name="nome" /><br />
+	 <!-- Outro recurso de confirmação que é e-mail -->
 	 Email: <input type="email" name="email" /><br />
 	 Curso: <input type="text" name="curso" /><br />
 	 <input type="submit" value="Enviar" />
